Dodavanje vise Ispita i ocena odjednom
Uradjena mogucnost dodavanja vise ispita i ocena odjednom, uradjena dva nova page-a i dva nova viewmodela, IDataProvider i EFCoreDataProvider azurirani sa novim upitima, kod ocene iskljucena mogucnost update-a i prikazivanja detalja jer se sve vidi u listi

--- a/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Ocene/OceneView.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Ocene/OceneView.xaml
@@ -45,13 +45,13 @@
             <local:OceneList vm="{x:Bind vm, Mode=TwoWay}"/>
 
 
-            <StackPanel Margin="10"
+            <!--<StackPanel Margin="10"
                     Background="WhiteSmoke"
                     Grid.Column="1"
                     Visibility="{x:Bind vm.SelectedItem, Mode=OneWay, Converter={StaticResource ObjectToVisibilityConverter}}">
 
-                <local:OcenaDetails Ocena="{x:Bind vm.SelectedItem, Mode=TwoWay}"
-                                                IsEnabled="{x:Bind  vm.DetailsMode, Mode=OneWay, Converter={StaticResource DetailsModeToBooleanConverter}}"/>
+                --><!--<local:OcenaDetails Ocena="{x:Bind vm.SelectedItem, Mode=TwoWay}"
+                                                IsEnabled="{x:Bind  vm.DetailsMode, Mode=OneWay, Converter={StaticResource DetailsModeToBooleanConverter}}"/>--><!--
 
                 <StackPanel Orientation="Horizontal"
                             Visibility="{x:Bind vm.DetailsMode, Mode=OneWay, Converter={StaticResource DetailsButtonVisibilityConverter}}"
@@ -65,9 +65,9 @@
                             Command="{x:Bind vm.CancelCommand, Mode=OneWay}"
                             Margin="10"/>
 
-                </StackPanel>
+                </StackPanel>-->
 
-            </StackPanel>
+            <!--</StackPanel>-->
         </Grid>
 
     </Grid>
