Uradjen login view i viewmodel, enkripcija lozinke i uklonjen prijemni ispit

--- a/Aplikacija/Studentska služba/Studentska služba/Views/MainPage/MainPage.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/MainPage/MainPage.xaml
@@ -42,12 +42,12 @@
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
 
-                <NavigationViewItem Tag="Prijemni ispit"
+                <!--<NavigationViewItem Tag="Prijemni ispit"
                                     Content="Prijemni ispit">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE125;"/>
                     </NavigationViewItem.Icon>
-                </NavigationViewItem>
+                </NavigationViewItem>-->
 
             </NavigationView.MenuItems>
 
