Dodata globalna varijabla trenutniKorisnik, ispravljen login i logout za trenutniKorisnika, dodata mogucnost promene lozinke

--- a/Aplikacija/Studentska služba/Studentska služba/Views/Settings/SettingsView.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Settings/SettingsView.xaml
@@ -17,6 +17,6 @@
             <TextBlock Text="DarkMode?"/>
             <ToggleSwitch/>
         </StackPanel>
-        <Button Content="Promeni lozinku"/>
+        <Button Content="Promeni lozinku" Click="Button_Click"/>
     </StackPanel>
 </Page>
